# eva

./: Cargo.toml  README.md
folding-schemes/: Cargo.toml
folding-schemes/src/: lib.rs
folding-schemes/src/ccs/: mod.rs  r1cs.rs
folding-schemes/src/commitment/: ipa.rs  kzg.rs  mod.rs  pedersen.rs
folding-schemes/src/folding/circuits/: mod.rs  utils.rs
folding-schemes/src/folding/circuits/nonnative/: affine.rs  uint.rs
folding-schemes/src/folding/hypernova/: cccs.rs  circuit.rs  lcccs.rs  nimfs.rs  utils.rs
folding-schemes/src/folding/nova/: circuits.rs  cyclefold.rs  decider_eth.rs  decider_eth_circuit.rs  decider_pedersen.rs  mod.rs  nifs.rs  traits.rs
folding-schemes/src/folding/protogalaxy/: folding.rs  traits.rs
folding-schemes/src/frontend/: mod.rs
folding-schemes/src/transcript/: poseidon.rs
folding-schemes/src/utils/: hypercube.rs  lagrange_poly.rs  mle.rs  vec.rs
folding-schemes/src/utils/espresso/: virtual_polynomial.rs
folding-schemes/src/utils/espresso/sum_check/: mod.rs  prover.rs  verifier.rs
video/: Cargo.toml
video/examples/: edit_bright_decider.rs  edit_crop_decider.rs  edit_cut_decider.rs  edit_gray_decider.rs  edit_inv_decider.rs  edit_mask_decider.rs  edit_noop_decider.rs  encode_decider.rs  hash_recorder.rs  hash_verifier.rs  hash_verifier_crop.rs  hash_verifier_cut.rs
video/src/: decider.rs  lib.rs  utils.rs  var.rs
video/src/edit/: constraints.rs  mod.rs
video/src/encode/: constants.rs  constraints.rs  mod.rs  traits.rs
video/src/griffin/: constraints.rs  griffin.rs  mod.rs  params.rs
