[workspace]
members = [
    "folding-schemes",
    "video"
]
resolver = "2"

[patch.crates-io]
ark-groth16 = { git = "https://github.com/winderica/groth16", branch = "experimental" }
ark-relations = { git = "https://github.com/winderica/snark", branch = "experimental" }
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch = "experimental" }

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

