[package]
name = "folding-schemes"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "^0.5.0"
ark-ff = { version = "^0.5.0", features = ["asm"] }
ark-poly = "^0.5.0"
ark-std = { version = "^0.5.0", features = ["print-trace"] }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = ["r1cs", "sponge", "crh"] }
ark-poly-commit = "^0.5.0"
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false } # this is patched at the workspace level
ark-snark = { version = "^0.5.0" }
ark-serialize = "^0.5.0"
ark-groth16 = { version = "^0.5.0" }
# ark-circom = { git = "https://github.com/arnaucube/circom-compat.git" }
thiserror = "1.0"
rayon = "1.7.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2.19"
color-eyre = "=0.6.2"
ark-pallas = { version = "^0.5.0", features = ["r1cs"] }
ark-vesta = { version = "^0.5.0", features = ["r1cs"] }
ark-bn254 = { version = "^0.5.0", features = ["r1cs"] }
ark-grumpkin = { version = "^0.5.0", features = ["r1cs"] }
icicle-cuda-runtime = { git = "https://github.com/winderica/icicle" }
icicle-core = { git = "https://github.com/winderica/icicle", features = ["arkworks"] }
icicle-bn254 = { git = "https://github.com/winderica/icicle", features = ["arkworks"] }
icicle-grumpkin = { git = "https://github.com/winderica/icicle", features = ["arkworks"] }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["parallel"]

parallel = [
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-crypto-primitives/parallel",
    "ark-r1cs-std/parallel",
    "ark-groth16/parallel",
    # "ark-relations/parallel",
]
