[package]
name = "video"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "^0.5.0"
ark-ff = { version = "^0.5.0", features = [ "asm" ] }
ark-poly = "^0.5.0"
ark-std = { version = "^0.5.0" }
ark-crypto-primitives = { version = "^0.5.0", default-features = false, features = ["r1cs", "sponge", "crh"] }
ark-relations = { version = "^0.5.0", default-features = false }
ark-r1cs-std = { version = "^0.5.0", default-features = false } # this is patched at the workspace level
ark-snark = { version = "^0.5.0"}
ark-serialize = "^0.5.0"
rayon = "1.7.0"
num-bigint = "^0.4.6"
ndarray = "0.15.6"
folding-schemes = { path = "../folding-schemes/" }
ark-pallas = {version="^0.5.0", features=["r1cs"]}
ark-vesta = {version="^0.5.0", features=["r1cs"]}
ark-bn254 = {version="^0.5.0", features=["r1cs"]}
ark-grumpkin = {version="^0.5.0", features=["r1cs"]}
ark-groth16 = { version = "^0.5.0" }
sha3 = "0.10.8"
num-modular = "0.6.1"
num-traits = "0.2.19"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["parallel"]
constraints = []

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-ec/parallel",  
    "ark-poly/parallel", 
    "ark-crypto-primitives/parallel",  
    "ark-r1cs-std/parallel", 
    "folding-schemes/parallel",
    # "ark-relations/parallel",
]

